# magneto_pad

./: Cargo.toml  Embed.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: kb_handle.rs  main.rs
firmware/: Cargo.toml  Embed.toml  build.rs  index.html  memory.x
firmware/.cargo/: config.toml
firmware/src/: constants.rs  hid.rs  main.rs  usb.rs  util.rs
firmware/src/usb/: builder.rs  config.rs  device_handler.rs  handlers.rs  hid.rs  mod.rs  web_usb.rs  webusb.rs  xinput.rs
shared/: Cargo.toml
shared/src/: lib.rs  message.rs
src/: main.rs
