[package]
edition = "2021"
name = "firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "unstable-pac", "time-driver-any", "exti", "chrono"] }
embassy-futures = { version = "0.1.0"}
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = "0.7"

shared = { path = "../shared"}
static_cell = "2.1.0"

[profile.release]
lto = true