[package]
edition = "2021"
name = "firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.6", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.3", features = ["defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.1", features = ["defmt", "stm32f411ce", "unstable-pac", "time-driver-any", "exti", "chrono"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.6" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b", version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

libm = "0.2.8"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = {version = "0.8", features = ["defmt"]}

shared = { path = "../shared"}
static_cell = "2.1"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3d6a270f30c45eaf394c8eb8bf182dd1a7ec2d7b" }
